Fix chat message overflow and set max to 200 characters

--- a/src/styles/components/chat.scss
+++ b/src/styles/components/chat.scss
@@ -50,7 +50,7 @@
         font-size: 1.4rem;
         background-color: rgb(245, 245, 245);
         border-radius: 1rem;
-        
+        word-break: break-word;
         padding: 1rem 1.5rem;
         justify-self: left;
     }
